# aws-lambda-python-template

./: Makefile  README.md  pyproject.toml  template.yml
.github/workflows/: deploy.yml
scripts/: build-env.sh  build-lib.sh
src/: aws_lambda.py
src/aws_lambda_python_template/: __init__.py
