[project]
name = "aws-lambda-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quick-sort", email = "quick-sort@github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
aws-lambda-python-template = "aws_lambda_python_template:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "moto>=5.1.18",
    "pytest-asyncio>=1.3.0",
    "pytest-cover>=3.0.0",
]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = 'info'
asyncio_mode = 'auto'
addopts = "--cov=app --cov-report html:cover"